--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
 
 header {
     position: fixed;
-    left: 15%;
+    left: 18%;
     font-family: 'Georgia', Times, Times New Roman, serif;
     background-color: #4aaaa5;
     color: #ffffff;
@@ -22,7 +22,7 @@ header {
     background-color: #ffffff;
     color: #777777;
     text-align: right;
-    padding-right: 200px;
+    padding-right: 295px;
     height: 40%;
     width: 90%;
 }
@@ -57,17 +57,65 @@ hr {
     background-size: contain;
     background-repeat: no-repeat;
 }
-
-.footer {
-    position: fixed;
+/*Better footer but unable to implement at this time - taken from recommended solution files
+footer {
+    padding: 30px 0;
     clear: both;
-    top: 560px;
-    /*margin: 0 auto;*/
+    font-size: 12px;
+    color: #ffffff;
+    color: #cccccc;
+    text-align: center;
+    background: #666666;
+    border-top: 8px solid #4aaaa5;
+    height: 50px;
+  }
+
+.cell {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
+  }*/
+
+/*Sticky footer that is relative to the container itself and requries a separte div within the container*/
+.contactpush {
+    position: relative;
+    clear: both;
+    margin-top: 45%;
     margin-left: 0px;
     width: 100%;
     padding: 10px 0;
-    /*height: 50px;*/
-    background: none repeat scroll 0 0 #4aaaa5;
+    background: #4aaaa5;
+    color: #ffffff;
+    border-top: 5px solid grey;
+    text-align: center;
+    font-size: 13px;
+
+}
+
+.portfoliopush {
+    position: relative;
+    clear: both;
+    margin-top: 75%;
+    margin-left: 0px;
+    width: 100%;
+    padding: 10px 0;
+    background: #4aaaa5;
+    color: #ffffff;
+    border-top: 5px solid grey;
+    text-align: center;
+    font-size: 13px;
+
+}
+
+.push {
+    position: relative;
+    clear: both;
+    margin-top: 2%;
+    margin-left: 0px;
+    width: 100%;
+    padding: 10px 0;
+    background: #4aaaa5;
     color: #ffffff;
     border-top: 5px solid grey;
     text-align: center;
@@ -75,20 +123,21 @@ hr {
 }
 
 .container {
-    position: fixed;
+    position: absolute;
     top: 15%;
-    left: 15%;
-    height: 450px;
-    width: 960px;
+    left: 18%;
+    height: auto;
+    width: 60rem;
     background-color: #ffffff;
-    overflow: scroll;
+    margin-bottom: -10px
 }
 
 #formposition {
-    margin-left: 2%
+    margin-left: 5%;
 }
 
 #box1 {
+    position: relative;
     margin-left: 2%;
     float: left;
     height: 250px;
@@ -112,6 +161,7 @@ hr {
 }
 
 #box2 {
+    position: relative;
     margin-left: 2%;
     float: left;
     height: 250px;
@@ -135,6 +185,7 @@ hr {
 }
 
 #box3 {
+    position: relative;
     margin-left: 2%;
     float: left;
     height: 250px;
@@ -158,7 +209,8 @@ hr {
 }
 
 #box4 {
-    margin-top: 2%;
+    position: relative;
+    margin-top: 10%;
     margin-left: 2%;
     float: left;
     height: 250px;
@@ -182,7 +234,8 @@ hr {
 }
 
 #box5 {
-    margin-top: 2%;
+    position: relative;
+    margin-top: 10%;
     margin-left: 2%;
     float: left;
     height: 250px;
